syntax = "proto3";

message Ping {
    uint32 id = 1;
}

message Pong {
    uint32 id = 1;
}

message User {
    string name = 1;
}

message Unit {}

message UserProfile {
    uint64 id       = 1;
    string name     = 2;
    string surname  = 3;
}

service PingService {
    rpc SendPing (Ping) returns (Pong) {}
}

service RetrieveService {
    rpc GetUserInfo     (User) returns (UserProfile) {}
    rpc LastUserInfo    (Unit) returns (UserProfile) {}
}
